cart.js 데이터 바인딩, UI 카테고리 토글 리스트에 따른 block, hidden 기능 추가 (#153)
* [🎨Modify]: cart.hrml 상품 리스트 image, product_name a태그 링크 수정

cart.html
- 상품 리스트 image, product_name 클릭 시 detail 페이지로 이동

* [🎨Modify]: cart.html h4 마크업 위치 변경

cart.html
- h4 마크업 위치 변경

* [✨Feat]: cart.js cart list 전체선택 기능 구현

cart.js
- cart list 전체선택 기능 구현

* [🔥Remove]: juhyuny 로컬feature/cart에 남은 cart.html 삭제(index.html 아님)

juhyuny 로컬 feature/cart
- 남아있던 cart.html 삭제(index.html 아님)

* [🎨Modify]: include.js addCart if문 추가

include.js
- addCart if문 추가

* [🔥Remove]: vite.config.js.~ 파일 삭제

vite.config.js.~ 파일 삭제

* [✨Feat]: cart.js 수량 증감 버튼 기능 구현

cart.js
- 수량 증감 버튼 기능 구현
- 수량에 따른 버튼 배경이미지 변경

* [🎨Modify]: cart.js 수량 증감 버튼 핸들러 함수 분리

cart.js
- 수량 증감 버튼 핸들러 함수 분리

* [✨Feat]: cart.js 장바구니 상품 카테고리 클릭 시 아코디언 토글 기능 구현

cart.js
- 장바구니 상품 카테고리 클릭 시 아코디언 토글 기능 구현

* [✨Feat]: cart.js 카테고리가 hidden 상태일 때 전체선택 클릭 시 이벤트

cart.js
- 장바구니 상품 카테고리가 hidden 상태일 때 전체선택 클릭 시 리스트에 hidden이 모두 제거되며 보여짐

* [✨Feat]: cart.js 체크된 체크박스 수, 전체 리스트 수 보이는 기능 구현

cart.js
- 체크된 체크박스 수, 전체 리스트 수 보이는 기능 구현

* [🎨Modify]: addCart.js 증감 버튼 적용, cart.js 토글버튼 이미지기능

addCart.js
- 증감 버튼 적용
cart.js
- 토글버튼 이미지 변경기능

* [🎨Modify]: cart/index.html 상품 클릭 시 상세페이지 링크 이동

cart/index.html
- 상품 클릭 시 상세페이지 링크 이동

* [✨Feat]: cart.js 장바구니 리스트 데이터 바인딩(수정중)

cart.js
- 장바구니 리스트 데이터 바인딩
cart/index.html
- 해당 리스트 카테고리에 내용이 없을 경우 안보이는 기능

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -87,7 +87,7 @@
             <!-- cart list가 있을 떄 -->
             <div class="border-b border-solid cart_list border-gray-50">
               <ul class="cart_category">
-                <li class="group_category">
+                <li class="hidden group_category category_refrigerated">
                   <div
                     class="flex justify-between my-4 cart_category text-label-medium"
                   >
@@ -116,8 +116,8 @@
                       </svg>
                     </button>
                   </div>
-                  <ul class="product_frozen product_list">
-                    <li class="flex items-center py-5 item">
+                  <ul class="product_refrigerated product_list">
+                    <!-- <li class="flex items-center py-5 item">
                       <fieldset class="item_select">
                         <input
                           type="checkbox"
@@ -132,13 +132,13 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#" class="mr-5">
+                      <a href="/src/pages/productDetail/index.html" class="mr-5">
                         <img
                           src="https://via.placeholder.com/60x78"
                           alt="풀무원 탱탱쫄면 (4개입)"
                         />
                       </a>
-                      <a href="#" class="product_name">
+                      <a href="/src/pages/productDetail/index.html" class="product_name">
                         <span class="block mr-5 w-345pxr"
                           >[풀무원] 탱탱쫄면 (4개입)</span
                         >
@@ -198,13 +198,13 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#" class="mr-5">
+                      <a href="/src/pages/productDetail/index.html" class="mr-5">
                         <img
                           src="https://via.placeholder.com/60x78"
                           alt="풀무원 탱탱쫄면 (4개입)"
                         />
                       </a>
-                      <a href="#" class="product_name">
+                      <a href="/src/pages/productDetail/index.html" class="product_name">
                         <span class="block mr-5 w-345pxr"
                           >[풀무원] 탱탱쫄면 (4개입)</span
                         >
@@ -249,38 +249,6 @@
                         </svg>
                       </button>
                     </li>
-                  </ul>
-                </li>
-                <li class="group_category">
-                  <div
-                    class="flex justify-between my-4 cart_category text-label-medium"
-                  >
-                    <div class="flex items-center gap-3 category_name">
-                      <svg
-                        role="img"
-                        class="category-icon"
-                        width="30"
-                        height="30"
-                        viewBox="0 0 30 30"
-                      >
-                        <use href="/icon/_sprite.svg#Frozen" />
-                      </svg>
-                      <h4 class="font-semibold text-label-medium">냉동 식품</h4>
-                    </div>
-                    <button class="list_toggle">
-                      <span class="sr-only">카테고리 상품 보기</span>
-                      <svg
-                        role="img"
-                        class="category-icon"
-                        width="30"
-                        height="30"
-                        viewBox="0 0 18 18"
-                      >
-                        <use href="/icon/_sprite.svg#Down" />
-                      </svg>
-                    </button>
-                  </div>
-                  <ul class="product_refrigerated product_list">
                     <li class="flex items-center py-5 item">
                       <fieldset class="item_select">
                         <input
@@ -296,13 +264,13 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#" class="mr-5">
+                      <a href="/src/pages/productDetail/index.html" class="mr-5">
                         <img
                           src="https://via.placeholder.com/60x78"
                           alt="풀무원 탱탱쫄면 (4개입)"
                         />
                       </a>
-                      <a href="#" class="product_name">
+                      <a href="/src/pages/productDetail/index.html" class="product_name">
                         <span class="block mr-5 w-345pxr"
                           >[풀무원] 탱탱쫄면 (4개입)</span
                         >
@@ -347,38 +315,6 @@
                         </svg>
                       </button>
                     </li>
-                  </ul>
-                </li>
-                <li class="group_category">
-                  <div
-                    class="flex justify-between my-4 cart_category text-label-medium"
-                  >
-                    <div class="flex items-center gap-3 category_name">
-                      <svg
-                        role="img"
-                        class="category-icon"
-                        width="30"
-                        height="30"
-                        viewBox="0 0 30 30"
-                      >
-                        <use href="/icon/_sprite.svg#Normal" />
-                      </svg>
-                      <h4 class="font-semibold text-label-medium">상온 식품</h4>
-                    </div>
-                    <button class="list_toggle">
-                      <span class="sr-only">카테고리 상품 보기</span>
-                      <svg
-                        role="img"
-                        class="category-icon"
-                        width="30"
-                        height="30"
-                        viewBox="0 0 18 18"
-                      >
-                        <use href="/icon/_sprite.svg#Down" />
-                      </svg>
-                    </button>
-                  </div>
-                  <ul class="product_frozen product_list">
                     <li class="flex items-center py-5 item">
                       <fieldset class="item_select">
                         <input
@@ -444,7 +380,203 @@
                           <use href="/icon/_sprite.svg#Cancel" />
                         </svg>
                       </button>
-                    </li>
+                    </li> -->
+                  </ul>
+                </li>
+                <li class="hidden group_category category_frozen">
+                  <div
+                    class="flex justify-between my-4 cart_category text-label-medium"
+                  >
+                    <div class="flex items-center gap-3 category_name">
+                      <svg
+                        role="img"
+                        class="category-icon"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 30 30"
+                      >
+                        <use href="/icon/_sprite.svg#Frozen" />
+                      </svg>
+                      <h4 class="font-semibold text-label-medium">냉동 식품</h4>
+                    </div>
+                    <button class="list_toggle">
+                      <span class="sr-only">카테고리 상품 보기</span>
+                      <svg
+                        role="img"
+                        class="category-icon"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 18 18"
+                      >
+                        <use href="/icon/_sprite.svg#Down" />
+                      </svg>
+                    </button>
+                  </div>
+                  <ul class="product_frozen product_list">
+                    <!-- <li class="flex items-center py-5 item">
+                      <fieldset class="item_select">
+                        <input
+                          type="checkbox"
+                          name="cartList"
+                          id="itemSelect5"
+                          class="input_checkbox_nonlabel peer top-17pxr"
+                        />
+                        <label
+                          for="itemSelect5"
+                          class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]"
+                        >
+                          <span class="sr-only">목록 선택</span>
+                        </label>
+                      </fieldset>
+                      <a href="/src/pages/productDetail/index.html" class="mr-5">
+                        <img
+                          src="https://via.placeholder.com/60x78"
+                          alt="풀무원 탱탱쫄면 (4개입)"
+                        />
+                      </a>
+                      <a href="/src/pages/productDetail/index.html" class="product_name">
+                        <span class="block mr-5 w-345pxr"
+                          >[풀무원] 탱탱쫄면 (4개입)</span
+                        >
+                      </a>
+                      <div class="option_count">
+                        <button
+                          type="button"
+                          class="minus w-30pxr h-30pxr"
+                          style="
+                            background-image: url(/input/minus-disabled.svg);
+                          "
+                        >
+                          <span class="sr-only">수량 감소</span>
+                        </button>
+                        <span class="item_count">1</span>
+                        <button
+                          type="button"
+                          class="plus w-30pxr h-30pxr"
+                          style="background-image: url(/input/plus.svg)"
+                        >
+                          <span class="sr-only">수량 증가</span>
+                        </button>
+                      </div>
+                      <div
+                        class="flex flex-col items-end font-bold product_price w-130pxr"
+                      >
+                        <span class="after_discount">4,980원</span>
+                        <span class="before_discount price_delete"
+                          >5,600원</span
+                        >
+                      </div>
+                      <button class="product_delete ml-10pxr">
+                        <span class="sr-only">목록 삭제하기</span>
+                        <svg
+                          role="img"
+                          class="category-icon"
+                          width="30"
+                          height="30"
+                          viewBox="0 0 30 30"
+                        >
+                          <use href="/icon/_sprite.svg#Cancel" />
+                        </svg>
+                      </button>
+                    </li> -->
+                  </ul>
+                </li>
+                <li class="hidden group_category category_normal">
+                  <div
+                    class="flex justify-between my-4 cart_category text-label-medium"
+                  >
+                    <div class="flex items-center gap-3 category_name">
+                      <svg
+                        role="img"
+                        class="category-icon"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 30 30"
+                      >
+                        <use href="/icon/_sprite.svg#Normal" />
+                      </svg>
+                      <h4 class="font-semibold text-label-medium">상온 상품</h4>
+                    </div>
+                    <button class="list_toggle">
+                      <span class="sr-only">카테고리 상품 보기</span>
+                      <svg
+                        role="img"
+                        class="category-icon"
+                        width="30"
+                        height="30"
+                        viewBox="0 0 18 18"
+                      >
+                        <use href="/icon/_sprite.svg#Down" />
+                      </svg>
+                    </button>
+                  </div>
+                  <ul class="product_normal product_list">
+                    <!-- <li class="flex items-center py-5 item">
+                      <fieldset class="item_select">
+                        <input
+                          type="checkbox"
+                          name="cartList"
+                          id="itemSelect6"
+                          class="input_checkbox_nonlabel peer top-17pxr"
+                        />
+                        <label
+                          for="itemSelect6"
+                          class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]"
+                        >
+                          <span class="sr-only">목록 선택</span>
+                        </label>
+                      </fieldset>
+                      <a href="/src/pages/productDetail/index.html" class="mr-5">
+                        <img
+                          src="https://via.placeholder.com/60x78"
+                          alt="풀무원 탱탱쫄면 (4개입)"
+                        />
+                      </a>
+                      <a href="/src/pages/productDetail/index.html" class="product_name">
+                        <span class="block mr-5 w-345pxr"
+                          >[풀무원] 탱탱쫄면 (4개입)</span
+                        >
+                      </a>
+                      <div class="option_count">
+                        <button
+                          type="button"
+                          class="minus w-30pxr h-30pxr"
+                          style="
+                            background-image: url(/input/minus-disabled.svg);
+                          "
+                        >
+                          <span class="sr-only">수량 감소</span>
+                        </button>
+                        <span class="item_count">1</span>
+                        <button
+                          type="button"
+                          class="plus w-30pxr h-30pxr"
+                          style="background-image: url(/input/plus.svg)"
+                        >
+                          <span class="sr-only">수량 증가</span>
+                        </button>
+                      </div>
+                      <div
+                        class="flex flex-col items-end font-bold product_price w-130pxr"
+                      >
+                        <span class="after_discount">4,980원</span>
+                        <span class="before_discount price_delete"
+                          >5,600원</span
+                        >
+                      </div>
+                      <button class="product_delete ml-10pxr">
+                        <span class="sr-only">목록 삭제하기</span>
+                        <svg
+                          role="img"
+                          class="category-icon"
+                          width="30"
+                          height="30"
+                          viewBox="0 0 30 30"
+                        >
+                          <use href="/icon/_sprite.svg#Cancel" />
+                        </svg>
+                      </button>
+                    </li> -->
                   </ul>
                 </li>
               </ul>
@@ -518,7 +650,7 @@
           <!-- member -->
           <aside class="cart_side_area w-284pxr pt-14">
             <div
-              class="sticky z-[-1] flex flex-col gap-4 cart_side top-[-60px]"
+              class="sticky z-[-1] flex flex-col gap-4 cart_side top-0"
             >
               <section class="border border-gray-100 border-solid">
                 <h3 class="sr-only">결제 정보</h3>
