--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -150,13 +150,18 @@
                         id="phone"
                         class="input_style"
                         placeholder="숫자만 입력해주세요."
+                        maxlength="11"
                         required
                       />
                       <div id="phone_error" class="hidden">
                         휴대폰 번호를 입력해 주세요.
                       </div>
                     </div>
-                    <button id="is_duplicated_phone" class="button_style">
+                    <button
+                      type="button"
+                      id="is_duplicated_phone"
+                      class="button_style"
+                    >
                       중복확인
                     </button>
                   </li>
@@ -230,12 +235,13 @@
                       id="birthday"
                       name="dateInput"
                       class="text-center input_style"
-                      pattern="\d{4}-\d{2}-\d{2}"
                     />
                   </li>
                   <!-- 추가입력 사항 -->
                   <li class="inline_flex">
-                    <div class="w-139pxr" role="checkbox">추가입력 사항</div>
+                    <div class="w-139pxr" role="checkbox" aria-checked="mixed">
+                      추가입력 사항
+                    </div>
                     <ul class="flex justify-between w-333pxr">
                       <li class="flex">
                         <input
