--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         >
           <svg
             class="rotate-180"
-            role="image"
+            role="img"
             width="60"
             height="60"
             viewBox="0 0 52 52"
@@ -326,7 +326,7 @@
         <div
           class="absolute z-10 bottom-330pxr right-495pxr swiper2-button-prev"
         >
-          <svg role="image" width="60" height="60" viewBox="0 0 52 52">
+          <svg role="img" width="60" height="60" viewBox="0 0 52 52">
             <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
@@ -336,7 +336,7 @@
         >
           <svg
             class="rotate-180"
-            role="image"
+            role="img"
             width="60"
             height="60"
             viewBox="0 0 52 52"
@@ -347,7 +347,10 @@
       </div>
 
       <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
-        <img src="/banner/line-banner 1.png" alt="" />
+        <img
+          src="/banner/line-banner 1.png"
+          alt="컬리스 퍼플 윅, 더 풍성해진 10월의 퍼플위크"
+        />
       </a>
 
       <!-- product slide 2번째 -->
@@ -580,7 +583,7 @@
         <div
           class="absolute z-10 bottom-330pxr right-495pxr swiper3-button-prev"
         >
-          <svg role="image" width="60" height="60" viewBox="0 0 52 52">
+          <svg role="img" width="60" height="60" viewBox="0 0 52 52">
             <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
@@ -590,7 +593,7 @@
         >
           <svg
             class="rotate-180"
-            role="image"
+            role="img"
             width="60"
             height="60"
             viewBox="0 0 52 52"
