Feature/product list#31 (#155)
* [🎨Modify] : swiper 반응형으로 수정

main swiper 반응형으로 코드 수정

* [🎨Modify] : 사이드바 카테고리 필터 완성( 초기화 기능 추후 추가 예정)

* [🎨Modify] : productList 페이지 pb 이미지 데이터 연결완료

* [📑Docs] : 일부 코드 리팩토링 및 프로덕트 리스트 카테고리까지 완료.

* [🎨Modify] : main 페이지 접근성 보완

* [🎨Modify] : productList 충돌 해결

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <!-- If we need pagination -->
         <div
-          class="flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr w-55pxr h-23pxr text-white bg-black/15 left-[70%] swiper-pagination text-16pxr"
+          class="text-white swiper-pagination w-55pxr h-23pxr bg-black/15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
         ></div>
 
         <!-- If we need navigation buttons -->
@@ -91,7 +91,7 @@
         >
           <svg
             class="rotate-180"
-            role="image"
+            role="img"
             width="60"
             height="60"
             viewBox="0 0 52 52"
@@ -326,7 +326,7 @@
         <div
           class="absolute z-10 bottom-330pxr right-495pxr swiper2-button-prev"
         >
-          <svg role="image" width="60" height="60" viewBox="0 0 52 52">
+          <svg role="img" width="60" height="60" viewBox="0 0 52 52">
             <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
@@ -336,7 +336,7 @@
         >
           <svg
             class="rotate-180"
-            role="image"
+            role="img"
             width="60"
             height="60"
             viewBox="0 0 52 52"
@@ -347,7 +347,10 @@
       </div>
 
       <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
-        <img src="/banner/line-banner 1.png" alt="" />
+        <img
+          src="/banner/line-banner 1.png"
+          alt="컬리스 퍼플 윅, 더 풍성해진 10월의 퍼플위크"
+        />
       </a>
 
       <!-- product slide 2번째 -->
@@ -580,7 +583,7 @@
         <div
           class="absolute z-10 bottom-330pxr right-495pxr swiper3-button-prev"
         >
-          <svg role="image" width="60" height="60" viewBox="0 0 52 52">
+          <svg role="img" width="60" height="60" viewBox="0 0 52 52">
             <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
@@ -590,7 +593,7 @@
         >
           <svg
             class="rotate-180"
-            role="image"
+            role="img"
             width="60"
             height="60"
             viewBox="0 0 52 52"
