[✨Feat]: 모달창 재사용 함수로 구현

--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -92,7 +92,7 @@
         </fieldset>
       </form>
     </main>
-    <div id="login_error" class="hidden"></div>
+    <div id="modal_box" class="hidden"></div>
     <footer id="footer"></footer>
   </body>
 </html>
