--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -367,6 +367,7 @@
         </section>
       </div>
     </main>
+    <div id="modal_box" class="hidden"></div>
     <footer id="footer"></footer>
   </body>
 </html>
